apps/picture-it/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picture-it
  namespace: picture-it
  labels:
    app: picture-it
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: picture-it
  template:
    metadata:
      labels:
        app: picture-it
    spec:
      containers:
      - name: picture-it
        image: ghcr.io/mlutz-devops/picture-it:v0.1.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
