apps/picture-it/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picture-it-service
  namespace: picture-it
spec:
  selector:
    app: picture-it
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
---
